--- a/index.html
+++ b/index.html
@@ -108,19 +108,19 @@
       </div>
       
       <div class="Chrome-extension">
-        <img src="Chromeicon.png" height="40" width="40" alt="サンプル画像">
+        <img src="paid_holiday.png" height="40" width="40" alt="サンプル画像">
         <p>日付を指定するだけで新時間管理システムに必要事項を自動入力してくれる</p>
       </div>
       <div class="Chrome-extension">
-        <img src="Chromeicon.png" height="40" width="40" alt="サンプル画像">
+        <img src="Delve.png" height="40" width="40" alt="サンプル画像">
         <p>人名/部署名/趣味/技能/自己紹介文の中からDelveでフリーワード検索</p>
       </div>
       <div class="Chrome-extension">
-        <img src="Chromeicon.png" height="40" width="40" alt="サンプル画像">
+        <img src="bing.png" height="40" width="40" alt="サンプル画像">
         <p>アイコンをクリックし、検索語を入れるだけでbing職場検索ができる</p>
       </div>
       <div class="Chrome-extension">
-        <img src="Chromeicon.png" height="40" width="40" alt="サンプル画像">
+        <img src="minute_omit.png" height="40" width="40" alt="サンプル画像">
         <p>勤怠入力の『分』のリストを5分刻みにする</p>
       </div>
 
