--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </ul>
       
       </div>
-      <iframe src="/Users/omuratakayuki/VScode/MyQuizApp/MyQuizApp.html" height="500" width="800"></iframe>
+      <iframe src="Quiz.html" height="500" width="800"></iframe>
       <div class="product-description">
         <strong>&#x1F4A1; PowerAppsで作ったアプリと比べた Webアプリのメリット</strong>
         <ul>
