--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       </div>
 
       <div class="product-description">
-        <p>私が作ってみたChrome拡張は「<span>MDNの検索を楽にする</span>」拡張機能。</p>
+        <p>私の作ったChrome拡張は「<span>MDNの検索を楽にする</span>」拡張機能。</p>
         <p>※MDNとは…Web開発に必要な技術情報を公開しているサイト</p>
       </div>
     </section>
