--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <section class="product">
       <h2 class="product-title">Chrome拡張機能</h2>
       <div class="product-description">
-        <p>Chrome拡張とは、<br>Webページ閲覧時に感じる<span>「こう表示してくれると嬉しいんだけどなー」を実現するための機能。</span></p>
+        <p>Chrome拡張とは、<br><span>Webページを自分の思い通りにカスタムできる機能。</span></p>
         <p>最近、社内でもたくさんの便利な拡張機能が紹介されています。</p>
       </div>
       
