--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="product-description">
         <p>作ったのは「三択クイズ」のアプリ。</p>
       </div>
-      <iframe src="/Users/omuratakayuki/VScode/MyQuizApp/MyQuizApp.html" height="520" width="800"></iframe>
+      <iframe src="Quiz.html" height="520" width="800"></iframe>
       <div class="product-description">
         <p>見た目はWebページと変わらない。<br>
             違いは、ユーザーが「クリック」などの動作をしたときに、<span>裏で様々な「処理」を行う</span>というところ。</p>
