--- a/index.html
+++ b/index.html
@@ -112,23 +112,31 @@
         <p>Chrome拡張とは、<br>Webページを<span>自分の思い通りにカスタムできる機能。</span></p>
         <p>最近、社内でもたくさんの便利な拡張機能が紹介されています。</p>
       </div>
-      
-      <div class="Chrome-extension">
-        <img src="paid_holiday.png" height="40" width="40" alt="サンプル画像">
-        <p>日付を指定するだけで新時間管理システムに必要事項を自動入力してくれる</p>
-      </div>
-      <div class="Chrome-extension">
-        <img src="Delve.png" height="40" width="40" alt="サンプル画像">
-        <p>人名/部署名/趣味/技能/自己紹介文の中からDelveでフリーワード検索</p>
-      </div>
-      <div class="Chrome-extension">
-        <img src="bing.png" height="40" width="40" alt="サンプル画像">
-        <p>アイコンをクリックし、検索語を入れるだけでbing職場検索ができる</p>
-      </div>
-      <div class="Chrome-extension">
-        <img src="minute_omit.png" height="40" width="40" alt="サンプル画像">
-        <p>勤怠入力の『分』のリストを5分刻みにする</p>
-      </div>
+
+      <a href="https://chrome.google.com/webstore/detail/paid-leave-application/eichjlfpjbpchcgbondpbbmljofjihmm">
+        <div class="Chrome-extension">
+          <img src="paid_holiday.png" height="40" width="40" alt="サンプル画像">
+          <p>年休の日付を指定するだけで新時間管理システムに必要事項を自動入力してくれる</p>
+        </div>
+      </a>
+      <a href="https://chrome.google.com/webstore/detail/delvesearch/hakomnjjneopnpnngjoppifbabhcpcmd">
+        <div class="Chrome-extension">
+          <img src="Delve.png" height="40" width="40" alt="サンプル画像">
+          <p>人名/部署名/趣味/技能/自己紹介文の中からDelveでフリーワード検索</p>
+        </div>
+      </a>
+      <a href="https://chrome.google.com/webstore/detail/bingworksearch/lindkechgjaldbkoacibliciadjjkflg">
+        <div class="Chrome-extension">
+          <img src="bing.png" height="40" width="40" alt="サンプル画像">
+          <p>アイコンをクリックし、検索語を入れるだけでbing職場検索ができる</p>
+        </div>
+      </a>
+      <a href="https://chrome.google.com/webstore/detail/minute-omit/mjfngahelhpnahhggoecemeampmpllmd?hl=ja&authuser=0">
+        <div class="Chrome-extension">
+          <img src="minute_omit.png" height="40" width="40" alt="サンプル画像">
+          <p>勤怠入力の『分』のリストを5分刻みにする</p>
+        </div>
+      </a>
 
       <div class="product-description">
         <p>私が作ったのは「<span>MDNの検索を楽にする</span>」拡張機能。</p>
@@ -137,10 +145,8 @@
     </section>
   </main>
 
-  
   <script src="main.js"></script>
 </body>
 <footer>
 </footer>
 </html>
-
