--- a/index.html
+++ b/index.html
@@ -73,9 +73,8 @@
 
       <div class="product-description">
         <strong>&#x1F4A1; Webページを作れると嬉しいこと</strong>
-        <p>レイアウトを<span>思い通りのデザインにすることができる</span>。<br>
-          また、作ったWebページは Share Point Online に保存して公開することも可能。<br>
-          Webページを作れる技術は、情報共有の手段として有効。</p>
+        <p>情報を届けたい人に<span>理解しやすい形で情報を届けられる</span>。<br>
+          また、作ったWebページは Share Point Online に保存して公開することも可能。</p>
       </div>
     </section>
     
@@ -89,14 +88,14 @@
         <p>見た目はWebページと変わらない。<br>
             違いは、ユーザーが「クリック」などの動作をしたときに、<span>裏で様々な「処理」を行う</span>というところ。</p>
       </div>
+      <div class="product-description">
+        <p>基礎コースでは、この「処理」の部分を重点的に学びました。</p>
+      </div>
       <p class="quiz">【三択クイズアプリの処理】</p>
       <ul>
         <li>ページ表示時・・・問題の数だけ、ページに問題文を作成</li>
         <li>回答選択時・・・・回答の合否を照合し、結果を表示</li>
       </ul>
-      <div class="product-description">
-        <p>基礎コースでは、この「処理」の部分を重点的に学びました。</p>
-      </div>
       <div class="product-description">
         <strong>&#x1F4A1; PowerAppsアプリと比較した Webアプリのメリット</strong>
         <ul>
