--- a/index.html
+++ b/index.html
@@ -85,11 +85,7 @@
       </div>
       <iframe src="Quiz.html" height="520" width="800"></iframe>
       <div class="product-description">
-        <p>見た目はWebページと変わらない。<br>
-            違いは、ユーザーが「クリック」などの動作をしたときに、裏で様々な「処理」を行うというところ。</p>
-      </div>
-      <div class="product-description">
-        <p>基礎コースでは、この<span>「処理」の部分を重点的に学びました</span>。</p>
+        <p>基礎コースでは、ページの裏側で行っている<span>「処理」の部分を重点的に学びました</span>。</p>
       </div>
       <p class="quiz">【三択クイズアプリの処理】</p>
       <ul>
