--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 
       <div class="product-description">
         <strong>&#x1F4A1; Webページを作れると嬉しいこと</strong>
-        <p>情報を届けたい人に<span>理解しやすい形で情報を届けられる</span>。<br>
-          また、作ったWebページは Share Point Online に保存して公開することも可能。</p>
+        <p>情報を届けるための<span>手段が増える</span>。<br>
+          作ったWebページは Share Point Online に保存して公開することも可能。</p>
       </div>
     </section>
     
